--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,9 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="register">Register</string>
     <string name="empty_field">Enter email and password</string>
+    <string name="save_user_id">store_user_id</string>
+    <string name="save_user_name">store_user_name</string>
+    <string name="save_user_email">store_user_email</string>
+    <string name="save_user_authorization">store_user_authorization</string>
+    <string name="authorization">Authorization</string>
 </resources>
