--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="save_user_email">store_user_email</string>
     <string name="save_user_authorization">store_user_authorization</string>
     <string name="authorization">Authorization</string>
+    <string name="menu_chats">Chats</string>
+    <string name="menu_account">Account</string>
 </resources>
