--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="chat_first_message">First message</string>
     <string name="create_chat">Create chat</string>
     <string name="edit_chat">Edit</string>
-    <string name="edit_chat_error">Error while editing chat</string>
     <string name="save">Save</string>
     <string name="user_information_updated">User information successful updated</string>
+    <string name="request_error">Something went wrong, try again later</string>
 </resources>
